# securityheaders

./: .gitignore  .pylintrc  LICENSE  README.md  constants.py  pyproject.toml  securityheaders.py  setup.py  utils.py
.github/workflows/: python-publish.yml
secheaders/: __main__.py  constants.py  exceptions.py  securityheaders.py  utils.py
